--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="start">开始</div>
 
     <div class="list">
-      <p>目前有xxx个网站</p>
+      <p>目前有<span id="count"></span>个网站</p>
 
     </div>
   <script charset="utf-8">require('./index.js')</script>
